formulacion_costes
osso@debian:~$ node
Welcome to Node.js v16.13.1.
Type ".help" for more information.
> 3*45
135
> (45*2)*1200000
108000000
> 
> 
> 5000*3900
> 100*12*3900
4680000
> 4800000*2
9600000
> 3*10*2000000
60000000
> 135*4000000
540000000
> 135*200000
27000000
> 5000000*5
25000000
> 1000*12
12000
> 1000*12*3900
46800000
> 13000*50*12
7800000
> 1000000*3
3000000
> 35000*3
105000
> 35000*3*12
1260000
> 2000000*3
6000000
> 8000000*2
16000000
> (1000000000+0.92*1000000000/(3*12)
... 
... 
> (1000000000)+0.92*1000000000/(3*12)
1025555555.5555556
> ((1000000000)+(0.2*1000000000))/(3)
400000000
> (20000*28*12*100000)+0*(10000*12)
672000000000
> (20000*28*12)+(10000*12)
6840000
> (20000*28*12)+(10000*12))*135
(20000*28*12)+(10000*12))*135
                        ^

Uncaught SyntaxError: Unexpected token ')'
> 8
8
> ((20000*28*12)+(10000*12))*135
923400000
> (45*2)*1200000*12
1296000000
> 3*10*2000000*12
720000000
> 400000000*12
4800000000
> ((8000000000)+(0.25*1000000000))/(3)
2750000000
> 200000000*12
2400000000
> (5000000+1000000+200000)*12
74400000
> (5000000+1000000+200000)*12*3
223200000
> 2000000*2*3
12000000
> 2500000*3
7500000
> ((8000000000)+(0.25*8000000000))/(3)
3333333333.3333335
> 
(To exit, press Ctrl+C again or Ctrl+D or type .exit)
> 
> ((2000000*2)+20000000+(2000000*10*3))*3
252000000
> ((12000000000)+(0.25*12000000000))/(3)
5000000000
> ((13000000000)+(0.25*13000000000))/(3)
5416666666.666667
> 
